updated horizontal lookup table and auton commands